--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "serverdupl",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/froggy-vr/server.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/froggy-vr/server/issues"
-  },
-  "homepage": "https://github.com/froggy-vr/server#readme",
   "dependencies": {
-    "express": "^4.16.4",
-    "mongoose": "^5.4.7"
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "jade": "~1.11.0",
+    "mongoose": "^5.4.7",
+    "morgan": "~1.9.0"
   }
 }
