--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chai-http": "^4.2.1",
     "mocha": "^5.2.0",
     "nyc": "^13.1.0",
-    "sinon": "^7.2.3"
+    "sinon": "^7.2.3",
+    "nock": "^10.0.6"
   }
 }
