added test cases

--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "mocha": "^5.2.0",
-    "nyc": "^13.1.0",
-    "sinon": "^7.2.3",
-    "nock": "^10.0.6"
+    "nyc": "^13.1.0"
   }
 }
